[workspace]
members = ["."]#, "persistence/mem"]
exclude = ["convert"]

[workspace.package]
version = "0.12.0-rc.2"
keywords = ["bitcoin", "wallet", "descriptor-wallet", "psbt", "taproot"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://lnp-bp.org"
repository = "https://github.com/BP-WG/bp-wallet"
rust-version = "1.82.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.9.0"
bp-std = "0.12.0-rc.2"
psbt = "0.12.0-rc.2"
descriptors = "0.12.0-rc.2"

sha2 = "0.10.8"
rand = "0.9.1"
aes-gcm = "0.10.3"
bip39 = "2.0.0"

serde_crate = { package = "serde", version = "1", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }

[package]
name = "bp-wallet"
version.workspace = true
description = "Modern, minimalistic & standard-compliant bitcoin wallet"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "bpwallet"

[dependencies]
amplify = { workspace = true }
bp-std = { workspace = true }
psbt = { workspace = true }
descriptors = { workspace = true }

rand = { workspace = true, optional = true }

clap = { workspace = true, optional = true }
serde_crate = { workspace = true, optional = true }

[features]
default = []
all = ["signers", "client-side-validation", "strict-encoding", "serde", "clap"]
signers = ["bp-std/signers", "rand"]
client-side-validation = ["bp-std/client-side-validation", "psbt/client-side-validation"]
strict-encoding = ["bp-std/strict_encoding", "psbt/strict_encoding"]
serde = ["serde_crate", "bp-std/serde", "psbt/serde", "descriptors/serde"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
