[package]
name = "bp-util"
version = { workspace = true }
description = "Modern, minimalistic & standard-compliant cold wallet library"
keywords = { workspace = true }
categories = { workspace = true }
readme = "../README.md"
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "bp"
path = "src/bin/bp.rs"

[lib]

[dependencies]
amplify = { workspace = true, features = ["serde"] }
strict_encoding = { workspace = true }
bp-wallet = { version = "0.11.0-beta.5", path = "..", features = ["all"] }
bp-std = { workspace = true, features = ["serde"] }
descriptors = { workspace = true, features = ["serde"] }
psbt = { workspace = true, features = ["serde"] }
bp-esplora = { workspace = true }
bp-electrum = { workspace = true }
base64 = "0.21.5"
log = { workspace = true }
env_logger = "0.10.0"
clap = { version = "4.4.8", features = ["derive", "env"] }
shellexpand = "3.1.0"
serde_crate = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

[features]
default = []
all = []
