[package]
name = "bp-convert"
version = "0.11.0"
description = "Convertor between bp-wallet and rust-bitcoin data types"
keywords = ["bitcoin", "wallet"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://lnp-bp.org"
repository = "https://github.com/BP-WG/bp-wallet"
rust-version = "1.60" # Due to rust-amplify
edition = "2021"
license = "Apache-2.0"

[lib]
name = "bconv"

[dependencies]
amplify = "4.0.0"
secp256k1 = "0.27.0"
bitcoin = "0.30.1"
bp-wallet = { path = ".." }

[patch.crates-io]
bp-primitives = { git = "https://github.com/BP-WG/bp-core", branch = "primitives" }
