[package]
name = "bp-runtime"
version.workspace = true
description = "Modern, minimalistic & standard-compliant bitcoin wallet runtime"
keywords.workspace = true
categories.workspace = true
readme = "../README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "bp_rt"

[dependencies]
amplify = { workspace = true }
bp-std = { workspace = true }
bp-esplora = { workspace = true, optional = true }
psbt = { workspace = true }
descriptors = { workspace = true }
serde_crate = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
default = ["esplora"]
all = ["esplora", "fs"]
esplora = ["bp-esplora"]
fs = ["serde"]
serde = ["serde_crate", "serde_yaml", "toml", "bp-std/serde"]
